--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Erpeel | D</title>
   </head>
   <body>
-    <h1>hello world</h1>
+    <form>
+      <label for="programStudi">Pilih Program Studi:</label>
+      <select name="programStudi" id="programStudi">
+        <option value="rpl">Rekayasa Perangkat Lunak</option>
+        <option value="sikc">Sistem Informasi Kota Cerdas</option>
+        <option value="ti">Teknik Informatika</option>
+        <option value="Trk">Teknik Rekayasa Komputer</option>
+      </select>
+    </form>
   </body>
 </html>
