--- a/index.html
+++ b/index.html
@@ -5,15 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Erpeel | D</title>
   </head>
+  <style></style>
   <body>
-    <form>
-      <label for="programStudi">Pilih Program Studi:</label>
-      <select name="programStudi" id="programStudi">
-        <option value="rpl">Rekayasa Perangkat Lunak</option>
-        <option value="sikc">Sistem Informasi Kota Cerdas</option>
-        <option value="ti">Teknik Informatika</option>
-        <option value="Trk">Teknik Rekayasa Komputer</option>
-      </select>
+    <!-- <h2>TABEL MAHASISWA</h2>
+    <table border="1">
+      <tr>
+        <th>No</th>
+        <th>NIM</th>
+        <th>Nama</th>
+        <th>Program Studi</th>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>2405005</td>
+        <td>ahmad sobsdjsajasj</td>
+        <td>Rekayasa Perangkat Lunak</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>2405005</td>
+        <td>AHMAD</td>
+        <td>Rekayasa Perangkat Lunak</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>2405005</td>
+        <td>AHMAD</td>
+        <td>Rekayasa Perangkat Lunak</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td>2405005</td>
+        <td>AHMAD</td>
+        <td>Rekayasa Perangkat Lunak</td>
+      </tr>
+    </table> -->
+
+    <form action="">
+      <textarea name="" id="" cols="10"></textarea>
+      <input type="radio" />
+      <input type="checkbox" />
+      <input type="submit" />
+      <input type="button" />
+      <br />
+      <button type="button"></button>
+      <select name="" id=""></select>
     </form>
   </body>
 </html>
